Fix on change and styling

--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
@@ -135,13 +135,14 @@ $primaryColor: #009AC7;
   .meta {max-width: 160px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; margin-top: 5px;}
 }
 
+
+
+
 // Remote media crop
 .ngremotemedia-crop {
   .nav-pills {display: table; clear: both; margin: 0 0 20px; list-style: none;
     > li {float: left;
-      &.active a {color: #000; background-color: #ffbb00; @include gradient(#ffbb00, #ff8d00); border-color: transparent;}
-      &.cropped a{border-color:green;}
-      &.changed a{border-color:orange;}
+      &.active a {color: #fff; background-color: $primaryColor; border-color: transparent;}
     }
     a {display: block; padding: 8px 12px; margin: 0 2px; color: #ccc; border-radius: 5px; background: transparent; border: 1px solid #ccc; @include transition(all, 0.2s, ease-in-out);
       &:hover,
@@ -149,6 +150,13 @@ $primaryColor: #009AC7;
     }
   }
 }
+
+.ngrm-multiple .ngremotemedia-crop .nav-pills > li {
+  &.cropped a{border-color:green;}
+  &.changed a{border-color:orange;}
+}
+
+
 
 // remote media admin
 #ngremotemedia-modal {
