Select2 locally, cleanup, video, styling

--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/browser.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/browser.hbs
@@ -36,6 +36,6 @@
   <div class="ngremotemedia-thumbs"></div>
 </div>
 
-<button class="btn btn-large btn-block load-more" type="button">
+<button class="btn btn-large btn-block load-more" type="button" style="display:none;">
     <i class="ngri ngri-spinner loader"></i> {{translate "Load more"}}
 </button>
