--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scalerattributes.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scalerattributes.hbs
@@ -1,7 +1,7 @@
 <div class="well control-group">
     <div class="form-group">
-        <label for="ngrm-sa-1">{{translate "Alt text"}}</label>
-        <input id="ngrm-sa-1" name="alttext" type="text" class="form-control" placeholder="{{translate "Alternate text"}}" {{#if alttext}} value="{{alttext}}"{{/if}}>
+        <label for="ngrm-sa-1">{{translate "Alternate text"}}</label>
+        <input id="ngrm-sa-1" name="alttext" type="text" class="form-control" {{#if alttext}} value="{{alttext}}"{{/if}}>
     </div>
 
     {{#if classes}}
