Clean up, caption, styling

--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/item.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/item.hbs
@@ -6,6 +6,10 @@
         {{#if is_video}}
             <i class="ngri-video ngri-big"></i>
         {{/if}}
+
+        {{#if is_other}}
+            <i class="ngri-book ngri-big"></i>
+        {{/if}}
         <p class="meta">{{filename}}<br />
             <span class="details">{{width}} x {{height}}</span>
             {{#if shared}}
