--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scalerattributes.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scalerattributes.hbs
@@ -4,10 +4,15 @@
         <input id="ngrm-sa-1" name="alttext" type="text" class="form-control" {{#if alttext}} value="{{alttext}}"{{/if}}>
     </div>
 
+    <div class="form-group">
+        <label for="ngrm-sa-2">{{translate "Caption"}}</label>
+        <input id="ngrm-sa-2" name="caption" type="text" class="form-control" {{#if caption}} value="{{caption}}"{{/if}}>
+    </div>
+
     {{#if classes}}
     <div class="form-group">
-        <label for="ngrm-sa-2">{{translate "Class"}}</label>
-        <select id="ngrm-sa-2" name="cssclass" class="form-control">
+        <label for="ngrm-sa-3">{{translate "Class"}}</label>
+        <select id="ngrm-sa-3" name="cssclass" class="form-control">
             <option value=""> - </option>
             {{#each classes}}
                 <option value="{{value}}"{{#if selected}} selected{{/if}}>{{name}}</option>
