scaler image initial size bug fix

--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scaler.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/scaler.hbs
@@ -5,9 +5,7 @@
 </section>
 
 <div class="ngremotemedia-crop-container">
-    <div class="image-wrap">
-        <img src="{{media}}" />
-    </div>
+    <div class="image-wrap"></div>
 </div>
 
 
