--- a/bundle/Resources/views/ezadminui/field/edit/interactions.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/interactions.html.twig
@@ -6,11 +6,17 @@
      data-version="{{ version }}">
 
     {{ form_row(form.resource_id, { 'attr': {'class' : 'media-id'} }) }}
+    {{ form_row(form.resource_url, { 'attr': {'class' : 'media-url'} }) }}
+    {{ form_row(form.size, { 'attr': {'class' : 'media-size'} }) }}
+    {{ form_row(form.media_type, { 'attr': {'class' : 'media-type'} }) }}
+    {{ form_row(form.tags, { 'attr': {'class' : 'media-tags'} }) }}
+    {{ form_row(form.width, { 'attr': {'class' : 'media-width'} }) }}
+    {{ form_row(form.height, { 'attr': {'class' : 'media-height'} }) }}
 
     {% if field_value.resourceId %}
         {% if type == 'image' %}
             {% if ngrm_is_croppable(content) %}
-                <input type="button" class="ngremotemedia-scale hid button" value="{{ 'ngremotemedia.field.edit.crop'|trans }}"" >
+                <input type="button" class="ngremotemedia-scale hid button" value="{{ 'ngremotemedia.field.edit.crop'|trans }}" >
             {% endif %}
         {% endif %}
 
