--- a/bundle/Resources/views/ezadminui/field/edit/interactions.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/interactions.html.twig
@@ -2,7 +2,7 @@
 
 <div id="ngremotemedia-buttons-{{ field.id }}" class="ngremotemedia-buttons" data-id="{{ field.id }}" data-contentobject-id="{{ contentId }}" data-version="{{ version }}">
 
-    {{ form_row(form.resource_id, { 'attr': {'class' : 'media-id'} }) }}
+    {{ form_row(form.resource_id, { 'attr': {'class' : 'media-id', 'v-model': 'selectedImage.id'} }) }}
     {{ form_row(form.resource_url, { 'attr': {'class' : 'media-url'} }) }}
     {{ form_row(form.size, { 'attr': {'class' : 'media-size'} }) }}
     {{ form_row(form.media_type, { 'attr': {'class' : 'media-type'} }) }}
