--- a/bundle/Resources/views/ezadminui/field/edit/preview.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/preview.html.twig
@@ -15,7 +15,7 @@
             {% if field_value.size %}
                 <p>{{ 'ngremotemedia.field.edit.size'|trans }}:
                     {% verbatim %}
-                        {{selectedImage.size}}
+                        {{formattedSize}}
                     {% endverbatim %}
                 </p>
             {% endif %}
