--- a/frontend/src/scss/ngremotemedia.scss
+++ b/frontend/src/scss/ngremotemedia.scss
@@ -1,3 +1,6 @@
+// Variables
+@import './variables';
+
 // Icons
 @font-face {
   font-family: 'ngri';
@@ -19,11 +22,11 @@
   text-align: center;
   line-height: 80px;
   display: block;
-  color: #333;
+  color: $mine-shaft;
 
   &.big {
     font-size: 64px;
-    color: #222;
+    color: $mine-shaft;
   }
 
   &.ng-warning:before {
@@ -57,6 +60,7 @@
   }
 }
 
+// General styles
 html {
   box-sizing: border-box;
 }
@@ -69,7 +73,34 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #333;
+  color: $mine-shaft;
+}
+
+// Element specific styles
+.btn {
+  border-radius: 4px;
+  text-align: center;
+  font-size: 14px;
+  line-height: 18px;
+  color: $white;
+  padding: 8px 16px;
+  border: 1px solid $mercury;
+  background: $white;
+  color: $mine-shaft;
+
+  &:active {
+    background: darken($mercury, 5%);
+  }
+
+  &.btn-blue {
+    background: $pacific-blue;
+    border: 0;
+    color: $white;
+
+    &:active {
+      background: darken($pacific-blue, 10%);
+    }
+  }
 }
 
 // Overriding vue-select styles
@@ -79,22 +110,22 @@ body {
 
   .vs__dropdown-toggle {
     border-radius: 0;
-    border: 1px solid #e4e4e4;
+    border: 1px solid $mercury;
     padding: 3px 5px 6px;
   }
 }
 
 // Placeholder colors
 ::-webkit-input-placeholder {
-  color: #999;
+  color: $dusty-gray;
 }
 
 :-ms-input-placeholder {
-  color: #999;
+  color: $dusty-gray;
 }
 
 ::placeholder {
-  color: #999;
+  color: $dusty-gray;
 }
 
 // Keyframes
