--- a/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
@@ -9,8 +9,13 @@
 
     {% include '@NetgenRemoteMedia/ezadminui/js_templates.html.twig' %}
 
-    {% set croppableVariations = ngrm_available_variations(content, true)  %}
-    {% set availableVariations = croppableVariations|scaling_format|json_encode %}
+    {% set croppableVariations = [] %}
+    {% set availableVariations = [] %}
+
+    {% if content is not null %}
+        {% set croppableVariations = ngrm_available_variations(content, true)  %}
+        {% set availableVariations = croppableVariations|scaling_format|json_encode %}
+    {% endif %}
 
     <div class="ngremotemedia-type">
         {% include '@NetgenRemoteMedia/ezadminui/field/edit/preview.html.twig' %}
