NGSTACK-342 Fix admin vendor css

--- a/bundle/Resources/views/ezadminui/stylesheets.html.twig
+++ b/bundle/Resources/views/ezadminui/stylesheets.html.twig
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="{{ asset('bundles/netgenremotemedia/css/remotemedia.css') }}"/>
+<link rel="stylesheet" href="{{ asset('bundles/netgenremotemedia/css/remotemedia-vendors.css') }}"/>
